--- a/flex/02-flex-header/index.html
+++ b/flex/02-flex-header/index.html
@@ -8,22 +8,30 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
     <div class="header">
-      <div class="left-links">
-        <ul>
-          <li><a href="#">ONE</a></li>
-          <li><a href="#">TWO</a></li>
-          <li><a href="#">THREE</a></li>
-        </ul>
+
+      <div class="steps">
+
+        <div class="list">
+          <p><a href="#">ONE</a></p>
+          <p><a href="#">TWO</a></p>
+          <p><a href="#">THREE</a></p>
+        </div>
+
+        <div class="list">
+          <div class="logo">LOGO</div>
+        </div>
+
+        <div class="list">
+          <p><a href="#">FOUR</a></p>
+          <p><a href="#">FIVE</a></p>
+          <p><a href="#">SIX</a></p>
+        </div>
+
       </div>
-      <div class="logo">LOGO</div>
-      <div class="right-links">
-        <ul>
-          <li><a href="#">FOUR</a></li>
-          <li><a href="#">FIVE</a></li>
-          <li><a href="#">SIX</a></li>
-        </ul>
-      </div>
+
     </div>
+
   </body>
 </html>
