--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,18 +9,27 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">
-        LOGO
+
+      <div class="box">
+        <div class="logo">
+          LOGO
+        </div>
+        <div class="links">
+          <p><a href="google.com">link-one</a></p> 
+          <p><a href="google.com">link-two</a></p>
+          <p><a href="google.com">link-three</a></p>
+        </div>
       </div>
-      <ul class="links">
-        <li><a href="google.com">link-one</a></li>
-        <li><a href="google.com">link-two</a></li>
-        <li><a href="google.com">link-three</a></li>
-      </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
-      <div class="profile-image"></div>
+
+
+      <div class="box">
+        <button class="notifications">
+          1 new notification
+        </button>
+        <div class="profile-image"></div>
+      </div>
+
+
     </div>
   </body>
 </html>
